# Ballot-Guardian

./: .gitignore  Anchor.toml  Cargo.toml  README.md
docs/: CONTRACT_OVERVIEW.md  HACKATHON_PLAN.md  REALMS_INTEGRATION.md
examples/: Cargo.toml  client_demo.rs
programs/quadratic-voting/: Cargo.toml
programs/quadratic-voting/src/: error.rs  errors.rs  events.rs  instruction.rs  lib.rs  math.rs  processor.rs  state.rs
programs/realms-adapter/: Cargo.toml
programs/realms-adapter/src/: error.rs  errors.rs  events.rs  instruction.rs  lib.rs  math.rs  processor.rs  state.rs
programs/reputation-engine/: Cargo.toml
programs/reputation-engine/src/: error.rs  errors.rs  events.rs  helpers.rs  instruction.rs  lib.rs  processor.rs  state.rs
tests/: README.md
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: helpers.rs  test_cross_program.rs  test_quadratic_voting.rs  test_realms_adapter.rs  test_reputation_engine.rs
web/: app.js  index.html  next.config.mjs  package-lock.json  package.json  styles.css
web/app/: globals.css  layout.js  page.js  providers.js
web/app/components/: AuditTrail.js  BallotResult.js  MathCalculator.js  NetworkStatus.js  ReputationDashboard.js  SuppressExtensionErrors.js  TypewriterHeadline.js  WalletConnectButton.js
web/app/dapp/: page.js
web/app/whitepaper/: page.js
web/lib/: anchor.js  demoStore.js  programClient.js
