[package]
name = "ballot-guardian-examples"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "client_demo"
path = "client_demo.rs"

[dependencies]
reputation-engine = { path = "../programs/reputation-engine", features = ["no-entrypoint"] }
quadratic-voting = { path = "../programs/quadratic-voting", features = ["no-entrypoint"] }
realms-adapter = { path = "../programs/realms-adapter", features = ["no-entrypoint"] }
solana-client = "2.2"
solana-sdk = "2.2"
solana-program = "2.2"
borsh = "1.5"
