[package]
name = "ballot-guardian-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "ballot_guardian_integration_tests"
path = "src/lib.rs"

[dependencies]
reputation-engine = { path = "../../programs/reputation-engine", features = ["no-entrypoint"] }
quadratic-voting = { path = "../../programs/quadratic-voting", features = ["no-entrypoint"] }
realms-adapter = { path = "../../programs/realms-adapter", features = ["no-entrypoint"] }
solana-sdk = "2.2"
solana-program = "2.2"
borsh = "1.5"
litesvm = "0.6"
